chore(certs): organize certificates into dev/prod folders
- Move certificates to certs/dev/ for development environment
- Create certs/prod/ folder for production certificates
- Add comprehensive README.md with generation instructions
- Add .gitkeep files to preserve folder structure
- Update config.json and defaults to use new paths

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "listen": ":8443",
-  "cert_file": "server.crt",
-  "key_file": "server.key",
+  "cert_file": "certs/dev/server.crt",
+  "key_file": "certs/dev/server.key",
   "timeout_sec": 300,
   "max_conns": 1000,
   "hosts": {
