feat(config): add ngrok tunnel support for development environment
- Add ngrok/ folder with config template and setup documentation
- Add NGROK_ENABLED and NGROK_DOMAIN env vars to config/env.go
- Update env.development.example with ngrok configuration
- Update README deployment section with ngrok quick start

--- a/env.development.example
+++ b/env.development.example
@@ -4,10 +4,32 @@
 # Environment: development or production
 APP_ENV=development
 
-# Domain settings
-DOMAIN=localhost:8443
-BASE_URL=https://localhost:8443
+# ============================================
+# Ngrok Configuration (Required for Signal Testing)
+# ============================================
+# Signal doesn't allow localhost, so we use ngrok for development.
+# See ngrok/README.md for setup instructions.
 
+# Enable ngrok tunnel mode (true/false)
+NGROK_ENABLED=true
+
+# Your ngrok domain (get from ngrok dashboard after starting tunnel)
+# Example: abc123xyz.ngrok.io or your-reserved.ngrok.io
+NGROK_DOMAIN=
+
+# ============================================
+# Domain Settings
+# ============================================
+# When NGROK_ENABLED=true and NGROK_DOMAIN is set:
+#   - DOMAIN defaults to NGROK_DOMAIN
+#   - BASE_URL defaults to https://${NGROK_DOMAIN}
+# Override explicitly if needed:
+# DOMAIN=your-custom-domain.com
+# BASE_URL=https://your-custom-domain.com
+
+# ============================================
+# Debug Settings
+# ============================================
 # Debug mode (true/false)
 DEBUG=true
 
