revert(dev): remove Cloudflare Tunnel support
- Delete cloudflare/ folder and all configuration
- Remove CLOUDFLARE_* and TUNNEL_PROVIDER env vars
- Remove signal-proxy binary from git tracking
- Revert to ngrok-only development tunneling

--- a/env.development.example
+++ b/env.development.example
@@ -5,37 +5,13 @@
 APP_ENV=development
 
 # ============================================
-# Tunnel Configuration
+# Ngrok Configuration (Required for Signal Testing)
 # ============================================
-# Choose your tunnel provider: "ngrok", "cloudflare", "none", or "auto"
-# - auto: Uses Cloudflare if configured, falls back to ngrok, then localhost
-# - ngrok: Use ngrok tunnel (requires NGROK_DOMAIN)
-# - cloudflare: Use Cloudflare Tunnel (requires CLOUDFLARE_DOMAIN)
-# - none: Use localhost (Signal won't work with localhost)
-TUNNEL_PROVIDER=auto
-
-# ============================================
-# Cloudflare Tunnel Configuration (Recommended - Free)
-# ============================================
-# Signal doesn't allow localhost, so we use Cloudflare Tunnel for development.
-# See cloudflare/README.md for setup instructions.
-
-# Enable Cloudflare Tunnel mode (true/false)
-CLOUDFLARE_ENABLED=true
-
-# Your Cloudflare Tunnel hostname
-# Quick tunnel: random-words.trycloudflare.com
-# Named tunnel: signal-dev.yourdomain.com
-CLOUDFLARE_DOMAIN=
-
-# ============================================
-# Ngrok Configuration (Alternative - Paid for TLS)
-# ============================================
-# Note: ngrok TLS tunnels now require pay-as-you-go.
+# Signal doesn't allow localhost, so we use ngrok for development.
 # See ngrok/README.md for setup instructions.
 
 # Enable ngrok tunnel mode (true/false)
-NGROK_ENABLED=false
+NGROK_ENABLED=true
 
 # Your ngrok domain (get from ngrok dashboard after starting tunnel)
 # Example: abc123xyz.ngrok.io or your-reserved.ngrok.io
@@ -44,9 +20,9 @@ NGROK_DOMAIN=
 # ============================================
 # Domain Settings
 # ============================================
-# When a tunnel is enabled and configured:
-#   - DOMAIN defaults to the tunnel domain
-#   - BASE_URL defaults to https://${DOMAIN}
+# When NGROK_ENABLED=true and NGROK_DOMAIN is set:
+#   - DOMAIN defaults to NGROK_DOMAIN
+#   - BASE_URL defaults to https://${NGROK_DOMAIN}
 # Override explicitly if needed:
 # DOMAIN=your-custom-domain.com
 # BASE_URL=https://your-custom-domain.com
