feat(scripts): add modular build system for cross-platform builds
- Add scripts/lib/ with shared libraries (colors, platform, utils)
- Add install.sh for Go dependency management
- Add build.sh with platform detection and --all flag support
- Add run.sh for launching built binaries
- Add start.sh unified entry point with interactive menu
- Add scripts/README.md with comprehensive documentation
- Update .gitignore with build/ output directory
- Terminal styling matches existing Go UI design patterns

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,10 @@ signal-proxy-linux
 signal-proxy-mac
 signal-proxy-windows
 
+# Build output directory
+build/
+
+
 # Go workspace
 go.work
 go.work.sum
