feat(proxy): implement TLS-in-TLS SNI passthrough architecture for Signal compatibility

--- a/env.development.example
+++ b/env.development.example
@@ -1,37 +1,10 @@
 # Signal Proxy - Development Environment
-# Copy this file to .env and customize as needed
+# Copy to .env and customize
 
-# Environment: development or production
 APP_ENV=development
-
-# ============================================
-# Ngrok Configuration (Required for Signal Testing)
-# ============================================
-# Signal doesn't allow localhost, so we use ngrok for development.
-# See ngrok/README.md for setup instructions.
-
-# Enable ngrok tunnel mode (true/false)
-NGROK_ENABLED=true
-
-# Your ngrok domain (get from ngrok dashboard after starting tunnel)
-# Example: abc123xyz.ngrok.io or your-reserved.ngrok.io
-NGROK_DOMAIN=
-
-# ============================================
-# Domain Settings
-# ============================================
-# When NGROK_ENABLED=true and NGROK_DOMAIN is set:
-#   - DOMAIN defaults to NGROK_DOMAIN
-#   - BASE_URL defaults to https://${NGROK_DOMAIN}
-# Override explicitly if needed:
-# DOMAIN=your-custom-domain.com
-# BASE_URL=https://your-custom-domain.com
-
-# ============================================
-# Debug Settings
-# ============================================
-# Debug mode (true/false)
 DEBUG=true
-
-# Log level: debug, info, warn, error
 LOG_LEVEL=debug
+
+# Ngrok (required for Signal testing - localhost not allowed)
+NGROK_ENABLED=true
+NGROK_DOMAIN=your-subdomain.ngrok.io
