--- a/env.production.example
+++ b/env.production.example
@@ -1,15 +1,11 @@
-# Signal Proxy - Production Environment
-# Copy this file to .env and customize with your production values
+# Signal Proxy - Production Environment (EC2 + No-IP)
+# Copy to .env and customize with your values
 
-# Environment: development or production
 APP_ENV=production
 
-# Domain settings - replace with your actual domain
-DOMAIN=proxy.yourdomain.com
-BASE_URL=https://proxy.yourdomain.com
+# Your No-IP subdomain (e.g., myproxy.ddns.net)
+DOMAIN=yoursubdomain.ddns.net
+BASE_URL=https://yoursubdomain.ddns.net
 
-# Debug mode (should be false in production)
 DEBUG=false
-
-# Log level: debug, info, warn, error
 LOG_LEVEL=info
