--- a/.gitignore
+++ b/.gitignore
@@ -153,3 +153,15 @@ data/
 
 # Generated documentation
 docs/_build/
+
+# =====================================================
+# Ngrok (contains authtoken - NEVER COMMIT)
+# =====================================================
+ngrok.yml
+ngrok/*.yml
+!ngrok/*.example
+!ngrok/*.yml.example
+
+# Local overrides
+*.local.json
+.env.local
