feat(pac): add PAC file endpoint with auto-config support
- Add internal/pac/ package for dynamic PAC generation
- Support credential embedding via query params
- Token-based access control and rate limiting
- Update frontend changelog with v1.5.0 entry
- Fix build script bc dependency (use awk)

--- a/env.https.example
+++ b/env.https.example
@@ -23,5 +23,11 @@ USERS_FILE=users.json
 # Metrics
 METRICS_LISTEN=:9090
 
+# PAC (Proxy Auto-Config) settings
+PAC_ENABLED=true
+PAC_TOKEN=              # Optional: Set secret token for PAC access (max 7 chars recommended)
+PAC_DEFAULT_USER=       # Optional: Default username if no ?user= param
+PAC_RATE_LIMIT_RPM=60   # Rate limit requests per minute
+
 DEBUG=false
 LOG_LEVEL=info
